overflow-y corrected

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 	height: 100vh;
 	width: 100vw;
 	background-color:#f3f3f3;
+	overflow-y: auto;
 }
 .upper{
 	display: flex;
